package edu.hitsz.prop;

import edu.hitsz.application.Main;
import edu.hitsz.audio.AudioManager;
import edu.hitsz.basic.AbstractFlyingObject;
import edu.hitsz.ui.MainFrame;

/**
 * 道具基类
 * @author hitsz
 */
public abstract class BaseProp extends AbstractFlyingObject {

    public final double resistance = 0.7;
    public BaseProp( int locationX, int locationY, int speedX, int speedY){
        super(locationX, locationY, speedX, speedY);
    }

    public void startTimer() {
        new Thread(() -> {
            try {
                Thread.sleep(3000);
                this.deactive();
            } catch (InterruptedException e) {
                e.printStackTrace();
            }
        }).start();
    }
    @Override
    public void forward() {
        super.forward();

        // 判定 x 轴出界
        if (locationX <= 0 || locationX >= MainFrame.WINDOW_WIDTH) {
            vanish();
        }

        // 判定 y 轴出界
        if (speedY > 0 && locationY >= MainFrame.WINDOW_HEIGHT ) {
            // 向下飞行出界
            vanish();
        }
    }

    public void active() {
        AudioManager.getInstance().PlaySFX("prop");
        startTimer();
    };

    public void deactive() {}


}